# math

./: .gitignore  CMakeLists.txt  README.md  common_project_include.in  nmathConfig.cmake  project_meta_info.in
doc/doxygen/html/: annotated.html  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_e1a715d407a4074a9fa63b2e02ec2b8f.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  files.html  index.html  matrix_8hxx_source.html  md__d___dropbox_projects_code_math__r_e_a_d_m_e.html  md__d___dropbox_projects_code_math_doc_matrix.html  md__d___dropbox_projects_code_math_doc_vector.html  pages.html  plane_8hxx_source.html  point_8hxx_source.html  struct_matrix-members.html  struct_matrix.html  struct_matrix_3_01_t_00_01n_00_01n_01_4-members.html  struct_matrix_3_01_t_00_01n_00_01n_01_4.html  struct_vector-members.html  struct_vector.html  struct_vector_3_01_t_00_012_01_4-members.html  struct_vector_3_01_t_00_012_01_4.html  struct_vector_3_01_t_00_013_01_4-members.html  struct_vector_3_01_t_00_013_01_4.html  struct_vector_3_01_t_00_014_01_4-members.html  struct_vector_3_01_t_00_014_01_4.html  vector_8hxx_source.html
doc/doxygen/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  classes_1.js  pages_0.js  pages_2.js  searchdata.js
doc/doxygen/latex/: annotated.tex  files.tex  matrix_8hxx_source.tex  md__d___dropbox_projects_code_math__r_e_a_d_m_e.tex  plane_8hxx_source.tex  point_8hxx_source.tex  refman.tex  struct_matrix.tex  struct_matrix_3_01_t_00_01n_00_01n_01_4.tex  struct_vector.tex  struct_vector_3_01_t_00_012_01_4.tex  struct_vector_3_01_t_00_013_01_4.tex  struct_vector_3_01_t_00_014_01_4.tex  vector_8hxx_source.tex
headers/: matrix.hxx
include/: vector.hxx
nlinear/: CMakeLists.txt
nlinear/headers/: matrix.hxx  vector.hxx
nlinear/src/: matrix.cxx  project_meta_info.in  vector.cxx
src/: matrix.cxx  vector.cxx
test/: CMakeLists.txt  project_meta_info.in
test/nlinear_test/: CMakeLists.txt  vector_test.cxx
